# TinyRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
MemoryManager--v1/: Allocator.cpp  Allocator.h  Block.h  MemoryManager.cpp  MemoryManager.h  Page.cpp  Page.h  PageManager.cpp  PageManager.h
asset/level/: 2nd Level.Level.json  Sample Level.Level.json
example/: data.json  example.cpp  example.h
source/: main.cpp
source/Core/DebugMemoryManager/: DebugAllocator.cpp  DebugAllocator.h  DebugMemoryManager.cpp  DebugMemoryManager.h
source/Core/Event/: Delegate.h
source/Core/GUIDReference/: GUIDReference.cpp  GUIDReference.h
source/Core/Lock/: SpinLock.h
source/Core/MemoryManager/: Allocator.cpp  Allocator.h  Block.h  MemoryManager.cpp  MemoryManager.h  Page.cpp  Page.h  PageManager.h
source/Core/ResourceManager/: ResourceManager.cpp  ResourceManager.h  ResourceManager.inl
source/Core/Stream/: IStream.h  JsonStream.h  JsonStream.inl  StreamType.h
source/Core/StreamSystem/: StreamSystem.hpp
source/Core/ThreadPool/: TaskResult.h  ThreadPool.cpp  ThreadPool.h
source/Engine/: Engine.cpp  Engine.h
source/Function/CommonType/: json.h
source/Function/Components/Login/: Login.cpp  Login.h
source/Function/Components/Transform/: Transform.cpp  Transform.h
source/Function/Components/login/: login.cpp  login.h
source/Function/Counter/: Counter.h  CounterManager.cpp  CounterManager.h
source/Function/Event/: Delegate.h
source/Function/Framework/Component/: Component.cpp  Component.h
source/Function/Framework/GameObject/: GameObject.cpp  GameObject.h
source/Function/Framework/HierarchyNode/: HierarchyNode.cpp  HierarchyNode.h
source/Function/Framework/Level/: Level.cpp  Level.h
source/Function/Framework/LevelManager/: LevelConfig.cpp  LevelConfig.h  LevelManager.cpp  LevelManager.h
source/Function/Framework/Object/: HierarchyNode.h  Object.cpp  Object.h  PrimaryObject.cpp  PrimaryObject.h  SerializableObject.cpp  SerializableObject.h
source/Function/Framework/ObjectManager/: ObjectManager.cpp  ObjectManager.h
source/Function/MemoryManager/: Allocator.cpp  Allocator.h  Block.h  MemoryManager.cpp  MemoryManager.h  Page.cpp  Page.h  PageManager.cpp  PageManager.h
source/Function/Message/: Message.cpp  Message.h
source/Function/StopWatch/: StopWatch.h  StopWatchManager.cpp  StopWatchManager.h
source/Platform/: Application.cpp  Application.h  Path.h
source/Platform/ConfigManager/: ConfigManager.cpp  ConfigManager.h
source/Platform/FileServer/: FileServer.h
source/Resource/: Resource.cpp  Resource.h
source/Resource/AssetManager/: AssetManager.cpp  AssetManager.h  from_json.cpp  from_json.h  to_json.cpp  to_json.h
source/Resource/GUID/: GUID.cpp  GUID.h
